# laz-rs-wasm

./: .gitignore  Cargo.toml  LICENSE  Readme.md
examples/: error_handling.html  test_decompress.html  wasm.html
src/: lib.rs
