[package]
name = "laz-rs-wasm"
version = "0.1.0"
authors = ["tmontaigu <thomas.montaigu@laposte.net>", "Chris Lee <csl170000@utdallas.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
laz = "^0.5.2"
wasm-bindgen = "^0.2.63"
console_error_panic_hook = "^0.1.6"

[dependencies.js-sys]
version = "0.3.4" 
